[gd_scene load_steps=5 format=4 uid="uid://bpjeisabnyt4i"]

[ext_resource type="Script" uid="uid://wotksxe03rn8" path="res://script/tetris.gd" id="1_due0h"]
[ext_resource type="TileSet" uid="uid://canr2c7puh78g" path="res://asset/tileset/dungeon_tileset.tres" id="2_p0hdu"]
[ext_resource type="FontFile" uid="uid://bfd8lxmo20ddl" path="res://asset/font/Everyday_Tiny_Bold.ttf" id="3_1bokx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1bokx"]
bg_color = Color(0.18039216, 0.08235294, 0.105882354, 0.6431373)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[node name="Tetris" type="Node2D"]
script = ExtResource("1_due0h")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAAfABwAAAAAAAEAAAAfABwAAAAAAAIAAAAfABwAAAAAAAMAAAAfABwAAAAAAAQAAAAfABwAAAAAAAUAAAAfABwAAAAAAAYAAAAfABwAAAAAAAcAAAAfABwAAAAAAAgAAAAfABwAAAAAAAkAAAAfABwAAAAAAAoAAAAfABwAAAAAAAsAAAAfABwAAAAAAAwAAAAfABwAAAAAAA0AAAAfABwAAAAAAA4AAAAfABwAAAAAAA8AAAAfABwAAAAAABAAAAAfABwAAAAAABEAAAAfABwAAAAAABIAAAAfABwAAAAAABMAAAAfABwAAAABAAAAAAAfABwAAAABAAIAAAAfABoAAAABAAMAAAAfABoAAAABAAQAAAAfABoAAAABAAUAAAAfABoAAAABAAYAAAAfABoAAAABAAcAAAAfABoAAAABAAgAAAAfABoAAAABAAkAAAAfABoAAAABAAoAAAAfABoAAAABAAsAAAAfABoAAAABAAwAAAAfABoAAAABAA0AAAAfABoAAAABAA4AAAAfABoAAAABAA8AAAAfABoAAAABABAAAAAfABoAAAABABEAAAAfABoAAAABABIAAAAfABsAAAABABMAAAAfABwAAAACAAAAAAAfABwAAAACAAEAAAAhABgAAAACAAIAAAAhABoAAAACAAMAAAAhABoAAAACAAQAAAAgABoAAAACAAUAAAAiABoAAAACAAYAAAAhABkAAAACAAcAAAAhABoAAAACAAgAAAAgABoAAAACAAkAAAAhABoAAAACAAoAAAAhABkAAAACAAsAAAAhABoAAAACAAwAAAAiABoAAAACAA0AAAAhABkAAAACAA4AAAAiABoAAAACAA8AAAAgABoAAAACABAAAAAhABkAAAACABEAAAAhABkAAAACABIAAAAhABwAAAACABMAAAAfABwAAAADAAAAAAAfABwAAAADAAEAAAAhABgAAAADAAIAAAAhABoAAAADAAMAAAAiABoAAAADAAQAAAAhABkAAAADAAUAAAAiABoAAAADAAYAAAAhABoAAAADAAcAAAAhABoAAAADAAgAAAAhABoAAAADAAkAAAAiABoAAAADAAoAAAAiABoAAAADAAsAAAAhABkAAAADAAwAAAAgABoAAAADAA0AAAAhABoAAAADAA4AAAAhABoAAAADAA8AAAAhABoAAAADABAAAAAiABoAAAADABEAAAAgABoAAAADABIAAAAhABwAAAADABMAAAAfABwAAAAEAAAAAAAfABwAAAAEAAEAAAAhABgAAAAEAAIAAAAgABoAAAAEAAMAAAAhABoAAAAEAAQAAAAhABoAAAAEAAUAAAAgABoAAAAEAAYAAAAhABkAAAAEAAcAAAAhABoAAAAEAAgAAAAhABoAAAAEAAkAAAAhABoAAAAEAAoAAAAhABoAAAAEAAsAAAAgABoAAAAEAAwAAAAhABoAAAAEAA0AAAAhABoAAAAEAA4AAAAhABoAAAAEAA8AAAAgABoAAAAEABAAAAAhABkAAAAEABEAAAAiABoAAAAEABIAAAAhABwAAAAEABMAAAAfABwAAAAFAAAAAAAfABwAAAAFAAEAAAAhABgAAAAFAAIAAAAiABoAAAAFAAMAAAAhABoAAAAFAAQAAAAhABoAAAAFAAUAAAAhABkAAAAFAAYAAAAiABoAAAAFAAcAAAAgABoAAAAFAAgAAAAhABkAAAAFAAkAAAAhABoAAAAFAAoAAAAhABoAAAAFAAsAAAAhABoAAAAFAAwAAAAhABoAAAAFAA0AAAAgABoAAAAFAA4AAAAhABoAAAAFAA8AAAAhABoAAAAFABAAAAAhABoAAAAFABEAAAAhABoAAAAFABIAAAAhABwAAAAFABMAAAAfABwAAAAGAAAAAAAfABwAAAAGAAEAAAAhABgAAAAGAAIAAAAgABoAAAAGAAMAAAAiABoAAAAGAAQAAAAhABoAAAAGAAUAAAAhABoAAAAGAAYAAAAgABoAAAAGAAcAAAAhABoAAAAGAAgAAAAhABoAAAAGAAkAAAAhABoAAAAGAAoAAAAiABoAAAAGAAsAAAAhABkAAAAGAAwAAAAiABoAAAAGAA0AAAAhABkAAAAGAA4AAAAgABoAAAAGAA8AAAAgABoAAAAGABAAAAAhABkAAAAGABEAAAAhABoAAAAGABIAAAAhABwAAAAGABMAAAAfABwAAAAHAAAAAAAfABwAAAAHAAEAAAAhABgAAAAHAAIAAAAhABkAAAAHAAMAAAAhABoAAAAHAAQAAAAhABoAAAAHAAUAAAAhABoAAAAHAAYAAAAhABoAAAAHAAcAAAAiABoAAAAHAAgAAAAhABoAAAAHAAkAAAAhABoAAAAHAAoAAAAhABoAAAAHAAsAAAAhABkAAAAHAAwAAAAhABkAAAAHAA0AAAAhABoAAAAHAA4AAAAhABkAAAAHAA8AAAAhABoAAAAHABAAAAAhABoAAAAHABEAAAAgABoAAAAHABIAAAAhABwAAAAHABMAAAAfABwAAAAIAAAAAAAfABwAAAAIAAEAAAAhABgAAAAIAAIAAAAhABkAAAAIAAMAAAAgABoAAAAIAAQAAAAhABoAAAAIAAUAAAAhABoAAAAIAAYAAAAgABoAAAAIAAcAAAAgABoAAAAIAAgAAAAhABkAAAAIAAkAAAAgABoAAAAIAAoAAAAhABoAAAAIAAsAAAAhABoAAAAIAAwAAAAgABoAAAAIAA0AAAAhABkAAAAIAA4AAAAgABoAAAAIAA8AAAAhABkAAAAIABAAAAAhABkAAAAIABEAAAAgABoAAAAIABIAAAAhABwAAAAIABMAAAAfABwAAAAJAAAAAAAfABwAAAAJAAEAAAAhABgAAAAJAAIAAAAhABkAAAAJAAMAAAAgABoAAAAJAAQAAAAhABoAAAAJAAUAAAAiABoAAAAJAAYAAAAhABoAAAAJAAcAAAAhABkAAAAJAAgAAAAgABoAAAAJAAkAAAAiABoAAAAJAAoAAAAhABkAAAAJAAsAAAAiABoAAAAJAAwAAAAgABoAAAAJAA0AAAAhABkAAAAJAA4AAAAhABkAAAAJAA8AAAAhABkAAAAJABAAAAAiABoAAAAJABEAAAAgABoAAAAJABIAAAAhABwAAAAJABMAAAAfABwAAAAKAAAAAAAfABwAAAAKAAEAAAAiABgAAAAKAAIAAAAjABoAAAAKAAMAAAAjABoAAAAKAAQAAAAjABoAAAAKAAUAAAAjABoAAAAKAAYAAAAjABoAAAAKAAcAAAAjABoAAAAKAAgAAAAjABoAAAAKAAkAAAAjABoAAAAKAAoAAAAjABoAAAAKAAsAAAAjABoAAAAKAAwAAAAjABoAAAAKAA0AAAAjABoAAAAKAA4AAAAjABoAAAAKAA8AAAAjABoAAAAKABAAAAAjABoAAAAKABEAAAAjABoAAAAKABIAAAAjABsAAAAKABMAAAAfABwAAAALAAAAAAAfABwAAAALAAEAAAAfABwAAAALAAIAAAAfABwAAAALAAMAAAAfABwAAAALAAQAAAAfABwAAAALAAUAAAAfABwAAAALAAYAAAAfABwAAAALAAcAAAAfABwAAAALAAgAAAAfABwAAAALAAkAAAAfABwAAAALAAoAAAAfABwAAAALAAsAAAAfABwAAAALAAwAAAAfABwAAAALAA0AAAAfABwAAAALAA4AAAAfABwAAAALAA8AAAAfABwAAAALABAAAAAfABwAAAALABEAAAAfABwAAAALABIAAAAfABwAAAALABMAAAAfABwAAAAMAAAAAAAfABwAAAAMAAEAAAAfABwAAAAMAAIAAAAfABwAAAAMAAMAAAAfABwAAAAMAAQAAAAfABwAAAAMAAUAAAAfABwAAAAMAAYAAAAfABwAAAAMAAcAAAAfABwAAAAMAAgAAAAfABwAAAAMAAkAAAAfABwAAAAMAAoAAAAfABwAAAAMAAsAAAAfABwAAAAMAAwAAAAfABwAAAAMAA0AAAAfABwAAAAMAA4AAAAfABwAAAAMAA8AAAAfABwAAAAMABAAAAAfABwAAAAMABEAAAAfABwAAAAMABIAAAAfABwAAAAMABMAAAAfABwAAAANAAAAAAAfABwAAAANAAEAAAAfABwAAAANAAIAAAAfABwAAAANAAMAAAAfABwAAAANAAQAAAAfABwAAAANAAUAAAAfABwAAAANAAYAAAAfABwAAAANAAcAAAAfABwAAAANAAgAAAAfABwAAAANAAkAAAAfABwAAAANAAoAAAAfABwAAAANAAsAAAAfABwAAAANAAwAAAAfABwAAAANAA0AAAAfABwAAAANAA4AAAAfABwAAAANAA8AAAAfABwAAAANABAAAAAfABwAAAANABEAAAAfABwAAAANABIAAAAfABwAAAANABMAAAAfABwAAAAOAAAAAAAfABwAAAAOAAEAAAAfABwAAAAOAAIAAAAfABwAAAAOAAMAAAAfABwAAAAOAAQAAAAfABwAAAAOAAUAAAAfABwAAAAOAAYAAAAfABwAAAAOAAcAAAAfABwAAAAOAAgAAAAfABwAAAAOAAkAAAAfABwAAAAOAAoAAAAfABwAAAAOAAsAAAAfABwAAAAOAAwAAAAfABwAAAAOAA0AAAAfABwAAAAOAA4AAAAfABwAAAAOAA8AAAAfABwAAAAOABAAAAAfABwAAAAOABEAAAAfABwAAAAOABIAAAAfABwAAAAOABMAAAAfABwAAAAPAAAAAAAfABwAAAAPAAEAAAAfABwAAAAPAAIAAAAfABwAAAAPAAMAAAAfABwAAAAPAAQAAAAfABwAAAAPAAUAAAAfABwAAAAPAAYAAAAfABwAAAAPAAcAAAAfABwAAAAPAAgAAAAfABwAAAAPAAkAAAAfABwAAAAPAAoAAAAfABwAAAAPAAsAAAAfABwAAAAPAAwAAAAfABwAAAAPAA0AAAAfABwAAAAPAA4AAAAfABwAAAAPAA8AAAAfABwAAAAPABAAAAAfABwAAAAPABEAAAAfABwAAAAPABIAAAAfABwAAAAPABMAAAAfABwAAAAQAAAAAAAfABwAAAAQAAEAAAAfABwAAAAQAAIAAAAfABwAAAAQAAMAAAAfABwAAAAQAAQAAAAfABwAAAAQAAUAAAAfABwAAAAQAAYAAAAfABwAAAAQAAcAAAAfABwAAAAQAAgAAAAfABwAAAAQAAkAAAAfABwAAAAQAAoAAAAfABwAAAAQAAsAAAAfABwAAAAQAAwAAAAfABwAAAAQAA0AAAAfABwAAAAQAA4AAAAfABwAAAAQAA8AAAAfABwAAAAQABAAAAAfABwAAAAQABEAAAAfABwAAAAQABIAAAAfABwAAAAQABMAAAAfABwAAAARAAAAAAAfABwAAAARAAEAAAAfABwAAAARAAIAAAAfABwAAAARAAMAAAAfABwAAAARAAQAAAAfABwAAAARAAUAAAAfABwAAAARAAYAAAAfABwAAAARAAcAAAAfABwAAAARAAgAAAAfABwAAAARAAkAAAAfABwAAAARAAoAAAAfABwAAAARAAsAAAAfABwAAAARAAwAAAAfABwAAAARAA0AAAAfABwAAAARAA4AAAAfABwAAAARAA8AAAAfABwAAAARABAAAAAfABwAAAARABEAAAAfABwAAAARABIAAAAfABwAAAARABMAAAAfABwAAAASAAAAAAAfABwAAAASAAEAAAAfABwAAAASAAIAAAAfABwAAAASAAMAAAAfABwAAAASAAQAAAAfABwAAAASAAUAAAAfABwAAAASAAYAAAAfABwAAAASAAcAAAAfABwAAAASAAgAAAAfABwAAAASAAkAAAAfABwAAAASAAoAAAAfABwAAAASAAsAAAAfABwAAAASAAwAAAAfABwAAAASAA0AAAAfABwAAAASAA4AAAAfABwAAAASAA8AAAAfABwAAAASABAAAAAfABwAAAASABEAAAAfABwAAAASABIAAAAfABwAAAASABMAAAAfABwAAAATAAAAAAAfABwAAAATAAEAAAAfABwAAAATAAIAAAAfABwAAAATAAMAAAAfABwAAAATAAQAAAAfABwAAAATAAUAAAAfABwAAAATAAYAAAAfABwAAAATAAcAAAAfABwAAAATAAgAAAAfABwAAAATAAkAAAAfABwAAAATAAoAAAAfABwAAAATAAsAAAAfABwAAAATAAwAAAAfABwAAAATAA0AAAAfABwAAAATAA4AAAAfABwAAAATAA8AAAAfABwAAAATABAAAAAfABwAAAATABEAAAAfABwAAAATABIAAAAfABwAAAATABMAAAAfABwAAAAUAAAAAAAfABwAAAAUAAEAAAAfABwAAAAUAAIAAAAfABwAAAAUAAMAAAAfABwAAAAUAAQAAAAfABwAAAAUAAUAAAAfABwAAAAUAAYAAAAfABwAAAAUAAcAAAAfABwAAAAUAAgAAAAfABwAAAAUAAkAAAAfABwAAAAUAAoAAAAfABwAAAAUAAsAAAAfABwAAAAUAAwAAAAfABwAAAAUAA0AAAAfABwAAAAUAA4AAAAfABwAAAAUAA8AAAAfABwAAAAUABAAAAAfABwAAAAUABEAAAAfABwAAAAUABIAAAAfABwAAAAUABMAAAAfABwAAAAVAAAAAAAfABwAAAAVAAEAAAAfABwAAAAVAAIAAAAfABwAAAAVAAMAAAAfABwAAAAVAAQAAAAfABwAAAAVAAUAAAAfABwAAAAVAAYAAAAfABwAAAAVAAcAAAAfABwAAAAVAAgAAAAfABwAAAAVAAkAAAAfABwAAAAVAAoAAAAfABwAAAAVAAsAAAAfABwAAAAVAAwAAAAfABwAAAAVAA0AAAAfABwAAAAVAA4AAAAfABwAAAAVAA8AAAAfABwAAAAVABAAAAAfABwAAAAVABEAAAAfABwAAAAVABIAAAAfABwAAAAVABMAAAAfABwAAAAWAAAAAAAfABwAAAAWAAEAAAAfABwAAAAWAAIAAAAfABwAAAAWAAMAAAAfABwAAAAWAAQAAAAfABwAAAAWAAUAAAAfABwAAAAWAAYAAAAfABwAAAAWAAcAAAAfABwAAAAWAAgAAAAfABwAAAAWAAkAAAAfABwAAAAWAAoAAAAfABwAAAAWAAsAAAAfABwAAAAWAAwAAAAfABwAAAAWAA0AAAAfABwAAAAWAA4AAAAfABwAAAAWAA8AAAAfABwAAAAWABAAAAAfABwAAAAWABEAAAAfABwAAAAWABIAAAAfABwAAAAWABMAAAAfABwAAAAXAAAAAAAfABwAAAAXAAEAAAAfABwAAAAXAAIAAAAfABwAAAAXAAMAAAAfABwAAAAXAAQAAAAfABwAAAAXAAUAAAAfABwAAAAXAAYAAAAfABwAAAAXAAcAAAAfABwAAAAXAAgAAAAfABwAAAAXAAkAAAAfABwAAAAXAAoAAAAfABwAAAAXAAsAAAAfABwAAAAXAAwAAAAfABwAAAAXAA0AAAAfABwAAAAXAA4AAAAfABwAAAAXAA8AAAAfABwAAAAXABAAAAAfABwAAAAXABEAAAAfABwAAAAXABIAAAAfABwAAAAXABMAAAAfABwAAAAYAAAAAAAfABwAAAAYAAEAAAAfABwAAAAYAAIAAAAfABwAAAAYAAMAAAAfABwAAAAYAAQAAAAfABwAAAAYAAUAAAAfABwAAAAYAAYAAAAfABwAAAAYAAcAAAAfABwAAAAYAAgAAAAfABwAAAAYAAkAAAAfABwAAAAYAAoAAAAfABwAAAAYAAsAAAAfABwAAAAYAAwAAAAfABwAAAAYAA0AAAAfABwAAAAYAA4AAAAfABwAAAAYAA8AAAAfABwAAAAYABAAAAAfABwAAAAYABEAAAAfABwAAAAYABIAAAAfABwAAAAYABMAAAAfABwAAAAZAAAAAAAfABwAAAAZAAEAAAAfABwAAAAZAAIAAAAfABwAAAAZAAMAAAAfABwAAAAZAAQAAAAfABwAAAAZAAUAAAAfABwAAAAZAAYAAAAfABwAAAAZAAcAAAAfABwAAAAZAAgAAAAfABwAAAAZAAkAAAAfABwAAAAZAAoAAAAfABwAAAAZAAsAAAAfABwAAAAZAAwAAAAfABwAAAAZAA0AAAAfABwAAAAZAA4AAAAfABwAAAAZAA8AAAAfABwAAAAZABAAAAAfABwAAAAZABEAAAAfABwAAAAZABIAAAAfABwAAAAZABMAAAAfABwAAAAaAAAAAAAfABwAAAAaAAEAAAAfABwAAAAaAAIAAAAfABwAAAAaAAMAAAAfABwAAAAaAAQAAAAfABwAAAAaAAUAAAAfABwAAAAaAAYAAAAfABwAAAAaAAcAAAAfABwAAAAaAAgAAAAfABwAAAAaAAkAAAAfABwAAAAaAAoAAAAfABwAAAAaAAsAAAAfABwAAAAaAAwAAAAfABwAAAAaAA0AAAAfABwAAAAaAA4AAAAfABwAAAAaAA8AAAAfABwAAAAaABAAAAAfABwAAAAaABEAAAAfABwAAAAaABIAAAAfABwAAAAaABMAAAAfABwAAAAbAAAAAAAfABwAAAAbAAEAAAAfABwAAAAbAAIAAAAfABwAAAAbAAMAAAAfABwAAAAbAAQAAAAfABwAAAAbAAUAAAAfABwAAAAbAAYAAAAfABwAAAAbAAcAAAAfABwAAAAbAAgAAAAfABwAAAAbAAkAAAAfABwAAAAbAAoAAAAfABwAAAAbAAsAAAAfABwAAAAbAAwAAAAfABwAAAAbAA0AAAAfABwAAAAbAA4AAAAfABwAAAAbAA8AAAAfABwAAAAbABAAAAAfABwAAAAbABEAAAAfABwAAAAbABIAAAAfABwAAAAbABMAAAAfABwAAAAcAAAAAAAfABwAAAAcAAEAAAAfABwAAAAcAAIAAAAfABwAAAAcAAMAAAAfABwAAAAcAAQAAAAfABwAAAAcAAUAAAAfABwAAAAcAAYAAAAfABwAAAAcAAcAAAAfABwAAAAcAAgAAAAfABwAAAAcAAkAAAAfABwAAAAcAAoAAAAfABwAAAAcAAsAAAAfABwAAAAcAAwAAAAfABwAAAAcAA0AAAAfABwAAAAcAA4AAAAfABwAAAAcAA8AAAAfABwAAAAcABAAAAAfABwAAAAcABEAAAAfABwAAAAcABIAAAAfABwAAAAcABMAAAAfABwAAAAdAAAAAAAfABwAAAAdAAEAAAAfABwAAAAdAAIAAAAfABwAAAAdAAMAAAAfABwAAAAdAAQAAAAfABwAAAAdAAUAAAAfABwAAAAdAAYAAAAfABwAAAAdAAcAAAAfABwAAAAdAAgAAAAfABwAAAAdAAkAAAAfABwAAAAdAAoAAAAfABwAAAAdAAsAAAAfABwAAAAdAAwAAAAfABwAAAAdAA0AAAAfABwAAAAdAA4AAAAfABwAAAAdAA8AAAAfABwAAAAdABAAAAAfABwAAAAdABEAAAAfABwAAAAdABIAAAAfABwAAAAdABMAAAAfABwAAAAeAAAAAAAfABwAAAAeAAEAAAAfABwAAAAeAAIAAAAfABwAAAAeAAMAAAAfABwAAAAeAAQAAAAfABwAAAAeAAUAAAAfABwAAAAeAAYAAAAfABwAAAAeAAcAAAAfABwAAAAeAAgAAAAfABwAAAAeAAkAAAAfABwAAAAeAAoAAAAfABwAAAAeAAsAAAAfABwAAAAeAAwAAAAfABwAAAAeAA0AAAAfABwAAAAeAA4AAAAfABwAAAAeAA8AAAAfABwAAAAeABAAAAAfABwAAAAeABEAAAAfABwAAAAeABIAAAAfABwAAAAeABMAAAAfABwAAAAfAAAAAAAfABwAAAAfAAEAAAAfABwAAAAfAAIAAAAfABwAAAAfAAMAAAAfABwAAAAfAAQAAAAfABwAAAAfAAUAAAAfABwAAAAfAAYAAAAfABwAAAAfAAcAAAAfABwAAAAfAAgAAAAfABwAAAAfAAkAAAAfABwAAAAfAAoAAAAfABwAAAAfAAsAAAAfABwAAAAfAAwAAAAfABwAAAAfAA0AAAAfABwAAAAfAA4AAAAfABwAAAAfAA8AAAAfABwAAAAfABAAAAAfABwAAAAfABEAAAAfABwAAAAfABIAAAAfABwAAAAfABMAAAAfABwAAAAgAAAAAAAfABwAAAAgAAEAAAAfABwAAAAgAAIAAAAfABwAAAAgAAMAAAAfABwAAAAgAAQAAAAfABwAAAAgAAUAAAAfABwAAAAgAAYAAAAfABwAAAAgAAcAAAAfABwAAAAgAAgAAAAfABwAAAAgAAkAAAAfABwAAAAgAAoAAAAfABwAAAAgAAsAAAAfABwAAAAgAAwAAAAfABwAAAAgAA0AAAAfABwAAAAgAA4AAAAfABwAAAAgAA8AAAAfABwAAAAgABAAAAAfABwAAAAgABEAAAAfABwAAAAgABIAAAAfABwAAAAgABMAAAAfABwAAAAhAAAAAAAfABwAAAAhAAEAAAAfABwAAAAhAAIAAAAfABwAAAAhAAMAAAAfABwAAAAhAAQAAAAfABwAAAAhAAUAAAAfABwAAAAhAAYAAAAfABwAAAAhAAcAAAAfABwAAAAhAAgAAAAfABwAAAAhAAkAAAAfABwAAAAhAAoAAAAfABwAAAAhAAsAAAAfABwAAAAhAAwAAAAfABwAAAAhAA0AAAAfABwAAAAhAA4AAAAfABwAAAAhAA8AAAAfABwAAAAhABAAAAAfABwAAAAhABEAAAAfABwAAAAhABIAAAAfABwAAAAhABMAAAAfABwAAAAiAAAAAAAfABwAAAAiAAEAAAAfABwAAAAiAAIAAAAfABwAAAAiAAMAAAAfABwAAAAiAAQAAAAfABwAAAAiAAUAAAAfABwAAAAiAAYAAAAfABwAAAAiAAcAAAAfABwAAAAiAAgAAAAfABwAAAAiAAkAAAAfABwAAAAiAAoAAAAfABwAAAAiAAsAAAAfABwAAAAiAAwAAAAfABwAAAAiAA0AAAAfABwAAAAiAA4AAAAfABwAAAAiAA8AAAAfABwAAAAiABAAAAAfABwAAAAiABEAAAAfABwAAAAiABIAAAAfABwAAAAiABMAAAAfABwAAAAjAAAAAAAfABwAAAAjAAEAAAAfABwAAAAjAAIAAAAfABwAAAAjAAMAAAAfABwAAAAjAAQAAAAfABwAAAAjAAUAAAAfABwAAAAjAAYAAAAfABwAAAAjAAcAAAAfABwAAAAjAAgAAAAfABwAAAAjAAkAAAAfABwAAAAjAAoAAAAfABwAAAAjAAsAAAAfABwAAAAjAAwAAAAfABwAAAAjAA0AAAAfABwAAAAjAA4AAAAfABwAAAAjAA8AAAAfABwAAAAjABAAAAAfABwAAAAjABEAAAAfABwAAAAjABIAAAAfABwAAAAjABMAAAAfABwAAAABAAEAAAAgABgAAAA=")
tile_set = ExtResource("2_p0hdu")

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 399.0
offset_top = 16.0
offset_right = 439.0
offset_bottom = 39.0
theme_override_fonts/font = ExtResource("3_1bokx")
theme_override_font_sizes/font_size = 8
text = "123"

[node name="Board" type="Node2D" parent="."]
position = Vector2(32, 32)

[node name="PieceContainer" type="Node2D" parent="."]
position = Vector2(32, 32)

[node name="NextPieceContainer" type="Node2D" parent="."]
position = Vector2(364, 56)

[node name="GameOverPanel" type="Panel" parent="."]
offset_left = 177.0
offset_top = 86.0
offset_right = 460.0
offset_bottom = 244.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1bokx")

[node name="FinalScoreLabel" type="Label" parent="GameOverPanel"]
layout_mode = 0
offset_left = 72.0
offset_top = 43.0
offset_right = 208.0
offset_bottom = 83.0
theme_override_fonts/font = ExtResource("3_1bokx")
theme_override_font_sizes/font_size = 12
text = "Restart"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="GameOverPanel"]
layout_mode = 0
offset_left = 75.0
offset_top = 109.0
offset_right = 211.0
offset_bottom = 149.0
theme_override_fonts/font = ExtResource("3_1bokx")
theme_override_font_sizes/font_size = 8
text = "Restart"

[node name="Button" type="Button" parent="."]
offset_left = 468.0
offset_top = 265.0
offset_right = 560.0
offset_bottom = 305.0
theme_override_fonts/font = ExtResource("3_1bokx")
text = "Back"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
